--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "next": "14.0.3",
     "next-auth": "^4.23.2",
     "react": "^18",
